# emmy

./: default.nix  emmy.cabal  readme.md  shell.nix
.nix/: byteslice.nix  posix-api.nix  primitive-unlifted.nix  run-st.nix
src/: Emmy.hs
